package com.gildedrose.refactored.strategy_pattern;

import com.gildedrose.Item;

public interface Updater {
    void update(Item item);
}
